<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="195dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="151dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/main_logo_" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/User_profile_icon"
            android:src="@drawable/user_profile" />
        <ImageButton
            android:id="@+id/menu_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/menu_icon"
            android:src="@drawable/open_menu_6208"
            android:backgroundTint="@android:color/transparent"

            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/header"
        android:layout_above="@id/input_layout"
        android:padding="16dp"
        android:background="#546479DC" />


    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:orientation="horizontal"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/How_can_i_assist_you_today"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_border"
            android:inputType="text"/>

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send_message_button"
            android:src="@drawable/right_arrow_6421"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"/>
    </LinearLayout>
</RelativeLayout>
